<resources>

    <string name="app_name">SimpleFPV</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_mobile_rc">SimpleFPV</string>

    <!--  DeviceListActivity -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    
    <!-- Connection server setup -->
    <string name="connection_title">Remote Connection</string>
    <string name="connection_button_connect">Connect</string>
    <string name="connection_identifier">Identifier</string>
    <string name="connection_port">Port</string>
    <string name="connection_hostname">IP to connect</string>
    <string name="this_ip_label">My p2p or wlan IP</string>
    <string name="this_ip"></string>
    <string name="bluetooth_connection_title">Bluetooth Connection</string>
    <string name="bluetooth_device">Device to connect</string>
    
    <!-- App role -->
    <string name="role_type_remote_label">Remote Type</string>
    <string name="role_type_control_label">Control Type</string>
    <string name="choose_role_type_label">Choose role of this app</string>
    <string name="mode_name">Vehicle</string>
    <string name="connect_to_rc">Connect to control center</string>
    <string name="connection_state_bt_established">Bluetooth connected</string>
    <string name="connection_state_bt_not_established">Bluetooth not connected</string>
    <string name="connect_to_vehicle">Connect to vehicle</string>
    <string name="environment_setting_title">Environment</string>
    <string name="video_transmit">Live preview</string>
    <string name="video_is_transmitted">Transmit live preview</string>
    <string name="thrust_zero_middle">Channel 0 zero setting</string>
    <string name="thrust_zero_is_middle">Middle position is zero</string>
    <string name="gps_active">GPS</string>
    <string name="gps_is_active">Activate transmit/display gps</string>
    <string name="gps_wait_for_reference">Wait for GPS reference ..</string>
    <string name="attitude_active">Attitude</string>
    <string name="attitude_is_active">Activate display attitude</string>
    <string name="preview_compression_percent">Video quality in percent</string>
    
     <string name="compression_prompt">Choose quality percent</string>
     <string-array name="compression_array">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
    </string-array>
    <string name="preview_fps">Frames per second</string>
    <string name="fps_prompt">Choose fps to send</string>
    <string-array name="fps_array">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="stereo_view">Stereo view</string>
    <string name="stereo_view_small">Stereo view shrink</string>
    
    <!-- Action buttons on the startup -->
    <string name="connect_as_vehicle">Vehicle (connect)</string>
    <string name="connect_as_cc">ControlCenter (connect)</string>
    <string name="connect_bluetooth">Bluetooth (connect)</string>
    <string name="settings">Settings</string>
 </resources>