<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/ConnectionServerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/connectionHostnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_hostname" />

        <EditText
            android:id="@+id/connectionHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/thisIPLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_ip_label" />

        <TextView
            android:id="@+id/thisIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_ip" />

        
        <TextView
            android:id="@+id/bluetoothConnectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_connection_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bluetoothDevicelistTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_device" />

        <Spinner
            android:id="@+id/bluetoothSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/environmentSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/environment_setting_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
       <TextView
            android:id="@+id/gpsActiveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_active" />

        <CheckBox
            android:id="@+id/gpsActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_is_active" 
            android:checked="false"/>
        
       <TextView
            android:id="@+id/attitudeActiveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attitude_active" />

        <CheckBox
            android:id="@+id/attitudeActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attitude_is_active" 
            android:checked="false"/>
        
        <TextView
            android:id="@+id/thrustZeroMiddleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thrust_zero_middle" />

        <CheckBox
            android:id="@+id/thrustZeroIsMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thrust_zero_is_middle" 
            android:checked="false"/>
        
        <TextView
            android:id="@+id/compressionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_compression_percent" />
        
        <!--  TextView
            android:id="@+id/videoTransmitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_transmit" / -->

        <!--  CheckBox
            android:id="@+id/videoIsTransmitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_is_transmitted" 
            android:checked="true"/ -->

        <Spinner
            android:id="@+id/compressionPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/compression_prompt"
            android:entries="@array/compression_array" />

        <TextView
            android:id="@+id/fpsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_fps" />
        
 
        <Spinner
            android:id="@+id/framesPerSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/fps_prompt"
            android:entries="@array/fps_array" />

        
        <TextView
            android:id="@+id/stereoViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stereo_view" />

        <CheckBox
            android:id="@+id/stereoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stereo_view" 
            android:checked="true"/>
        
        <TextView
            android:id="@+id/stereoViewSmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stereo_view_small" />

        <CheckBox
            android:id="@+id/stereoViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stereo_view_small" 
            android:checked="false"/>
                
   </TableLayout>

</ScrollView>